force-app/main/default/objects/firstReleasePartner__c/firstReleasePartner__c.object-meta.xml
<CustomObject>
    <label>first release partner</label>
    <nameField>
        <displayFormat>FRP-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>first release partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>