force-app/main/default/objects/firstReleasePartner__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>first release partners</relationshipLabel>
    <relationshipName>firstReleasePartners</relationshipName>
    <type>Lookup</type>
</CustomField>