force-app/main/default/objects/firstReleasePartner__c/fields/IsbnRequired__c.field-meta.xml
<CustomField>
    <fullName>IsbnRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISBN required</label>
    <type>Checkbox</type>
</CustomField>