force-app/main/default/objects/firstReleasePartner__c/fields/NoPigitalProducts__c.field-meta.xml
<CustomField>
    <fullName>NoPigitalProducts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>No digital products</label>
    <type>Checkbox</type>
</CustomField>