force-app/main/default/objects/firstReleasePartner__c/fields/PrintedAbroad__c.field-meta.xml
<CustomField>
    <fullName>PrintedAbroad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Printed abroad</label>
    <type>Checkbox</type>
</CustomField>