force-app/main/default/objects/firstReleasePartner__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>IF ( ISPICKVAL($User.OperatingCompany__c, &apos;Plantyn&apos;), 2, 
				IF ( ISPICKVAL($User.OperatingCompany__c, &apos;Noordhoff&apos;), 1,
        IF ( ISPICKVAL($User.OperatingCompany__c, &apos;Liber&apos;), 1,
												IF ( ISPICKVAL($User.OperatingCompany__c, &apos;Noordhoff Zorg&apos;),1,null)
												)
    )
)</defaultValue>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>