force-app/main/default/objects/firstReleasePartner__c/fields/Releasetype__c.field-meta.xml
<CustomField>
    <fullName>Releasetype__c</fullName>
    <label>Releasetype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First release</fullName>
            </value>
            <value>
                <fullName>Reprint</fullName>
            </value>
            <value>
                <fullName>First release &amp; reprint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>