force-app/main/default/objects/firstReleasePartner__c/fields/StockRequired__c.field-meta.xml
<CustomField>
    <fullName>StockRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stock required</label>
    <type>Checkbox</type>
</CustomField>