force-app/main/default/objects/firstReleasePartner__c/validationRules/QuantityOneOrPlus.validationRule-meta.xml
<ValidationRule>
    <fullName>QuantityOneOrPlus</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt; 1</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>The Quantity needs to be 1 or more</errorMessage>
</ValidationRule>